[IMPL] ht-detector: started implementation
Signed-off-by: Ilya Palachev <palachev.ilya@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ set (SOURCE_tests
 	Tests/gaussStringTest.cpp
 	Tests/globalCorrection.cpp
 	Tests/GlobalCorrectionReal.cpp
+        Tests/HallTurlachDetector.cpp
 	Tests/intersectCubeCutted.cpp
 	Tests/intersectPolyhedron.cpp
 	Tests/joinFacets.cpp
