[GIT] gitignore: added symbolic links to the list
Signed-off-by: Ilya Palachev <palachev.ilya@yandex.ru>

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ config/debug_exceptions.conf
 
 # CTags generated indexes
 tags
+
+# Symbolic links to headers directories
+Source/Eigen
+Source/coin
