[REFACTOR] Separated horizontal polyhedral planar section
Signed-off-by: Ilya Palachev <palachev.ilya@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,7 @@ set (SOURCE_pcl
 
 set (SOURCE_tests
 	Tests/buildCluster.cpp
+	Tests/calculateHorizontalSection.cpp
 	Tests/correct.cpp
 	Tests/experimentCGAL_convexHullDynamic.cpp
 	Tests/experimentCGAL_convexHullStatic.cpp
