[IMPL] ht-detector: added symmetric lens example from paper
Signed-off-by: Ilya Palachev <palachev.ilya@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ set (SOURCE_tests
 	Tests/globalCorrection.cpp
 	Tests/GlobalCorrectionReal.cpp
         Tests/detectSectionCorners.cpp
+	Tests/detectSymmetricLensCorners.cpp
 	Tests/intersectCubeCutted.cpp
 	Tests/intersectPolyhedron.cpp
 	Tests/joinFacets.cpp
