[IMPL] tractable: added data generation
Signed-off-by: Ilya Palachev <palachev.ilya@yandex.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ set (SOURCE_tests
 	Tests/correct.cpp
 	Tests/experimentCGAL_convexHullDynamic.cpp
 	Tests/experimentCGAL_convexHullStatic.cpp
+	Tests/fitTractableSet.cpp
 	Tests/gaussStringTest.cpp
 	Tests/globalCorrection.cpp
 	Tests/GlobalCorrectionReal.cpp
