--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ set (SOURCE_tests
 	Tests/buildCluster.cpp
 	Tests/calculateHorizontalSection.cpp
 	Tests/correct.cpp
+	Tests/dualTransform.cpp
 	Tests/experimentCGAL_convexHullDynamic.cpp
 	Tests/experimentCGAL_convexHullStatic.cpp
 	Tests/fitTractableSet.cpp
